# baize

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: nsys-analyzer.md
nsys_tools/: __init__.py  cli.py
nsys_tools/templates/: flamegraph.html  flamegraph_diff.html  shape_table.html
nsys_tools/tools/: dual_pp_time.py  dual_tp_ep_full_example.py  exporter.py  flamegraph.py  gpu_allreduce_skew.py  gpu_comm.py  gpu_deepep_skew.py  gpu_p2p_skew.py  kernel_shapes.py  mcore_layout_search.py  mcore_pp_timeline.py  parallel_groups.py  pp_timeline.py
nsys_tools/utils/: __init__.py  comm.py  common.py  kernel.py  nvtx.py
